<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PocketCaddie</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="button_stats">STATS</string>
    <string name="button_play">PLAY</string>
    <string name="title_activity_choose_course">Choose Course</string>
    <string name="title_activity_choose_stats">Choose Stats</string>
    <string name="button_playersStats">PLAYERS</string>
    <string name="button_coursesStats">COURSES</string>
    <string name="title_activity_choose_player_stats">Player Stats</string>
    <string name="title_activity_choose_player_stat">Choose Player</string>
    <string name="title_activity_choose_course_stat">Choose Course</string>
    <string name="title_activity_type">Type of Play</string>
    <string name="match_play">Match Play</string>
    <string name="stroke_play">Stroke Play</string>
    <string name="nine_holes">Nine Holes</string>
    <string name="eighteen_holes">Eighteen Holes</string>
    <string name="next_screen">Next</string>
    <string name="title_activity_choose_course_avtivity">Choose Course</string>
    <string name="title_activity_choose_player">Choose Players</string>
    <string name="title_activity_select_players">Select Player</string>
    <string name="edit_player_select">New Player</string>
    <string name="Add">Add Player</string>
    <string name="title_activity_select_players2">Select Players</string>
    <string name="title_activity_choose_course2">ChooseCourse2Activity</string>
    <string name="tilden">Tilden</string>
    <string name="new_profile">New Profile</string>
    <string name="guest_player">Guest Player</string>
    <string name="Input_Player">Enter Player Name</string>
    <string name="Enter">Enter</string>
    <string name="Cancel">Cancel</string>
    <string name="Edit">Edit</string>
    <string name="Remove">Remove</string>
    <string name="title_activity_select_course">Select Course</string>
    <string name="Input_Course">Enter Course Name</string>
    <string name="New_Course">New Course</string>
    <string name="course_empty_message">Currently No Saved Courses</string>
    <string name="player_empty_message">Currently No Saved Players</string>
    <string name="add_player_message">Player Profile Will Be Saved. Players Can Be Deleted In Stats</string>
    <string name="add_course_message">Course Profile Will Be Saved. Courses Can Be Deleted In Stats</string>
    <string name="title_activity_guest_input_dialog">GuestInputDialog</string>
    <string name="add_guest_message">Guest Data Will Not Be Saved</string>
    <string name="title_activity_scores">Scores</string>
    <string name="Front_Nine">Front Nine</string>
    <string name="Back_Nine">Back Nine</string>
    <string name="Eighteen_Holes">Eighteen Holes</string>
    <string name="Start_Message">If above information is correct, press START button when play begins. Round timer will begin when button is pressed. For accurate results press only when round is currently set to begin.</string>
    <string name="play_round">START ROUND</string>
    <string name="title_activity_player_stat">PlayerStat</string>
    <string name="title_activity_course_stat">CourseStat</string>
    <string name="delete">Delete</string>
    <string name="quit1">Are You Sure?</string>
    <string name="quit2">Current Data Will Be Lost</string>
    <string name="save_round">Save And Quit</string>
    <string name="select_save">Select Rounds To Save</string>
    <string name="no_players">No Players Able To Be Saved</string>
    <string name="title_activity_course_state_display">CourseStateDisplay</string>
    <string name="view_course_stat">View Course Stats</string>
    <string name="Rounds">Past Rounds:</string>
    <string name="add_player">Select Players</string>
    <string name="add_course">Select Course</string>

</resources>
