<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/ic_background" android:paddingTop="?android:actionBarSize" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="50.0sp" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/type_course_name" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@+id/type_names" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <RadioGroup android:id="@+id/play_style" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RadioButton android:textColor="#ffffffff" android:id="@+id/Front_Nine" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Front_Nine" />
        <RadioButton android:textColor="#ffffffff" android:id="@+id/Back_Nine" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Back_Nine" />
        <RadioButton android:textColor="#ffffffff" android:id="@+id/Eighteen_Holes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Eighteen_Holes" />
    </RadioGroup>
    <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Start_Message" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:enabled="false" android:background="@android:color/darker_gray" android:paddingLeft="20dp" android:paddingRight="20dp" android:textColor="@android:color/black" android:id="@+id/next_screem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/play_round" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:onClick="toPlayers" />
    </RelativeLayout>
</LinearLayout>