<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_course_message" />
    <EditText android:id="@+id/course_input" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/Input_Course" android:maxLength="15" android:inputType="textPersonName|textCapSentences" />
    <RadioGroup android:orientation="horizontal" android:id="@+id/course_select_dialog" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:id="@+id/nine_hole_select" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nine_holes" android:layout_weight="1.0" />
        <RadioButton android:id="@+id/eighteen_hole_select" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/eighteen_holes" android:layout_weight="1.0" />
    </RadioGroup>
    <LinearLayout android:orientation="horizontal" android:id="@+id/front_nine" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <EditText android:textSize="12.0sp" android:id="@+id/first_hole" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="1" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:id="@+id/second_hole" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="2" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:id="@+id/third_hole" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="3" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:id="@+id/fourth_hole" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="4" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:id="@+id/fifth_hole" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="5" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:id="@+id/sixth_hole" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="6" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:id="@+id/seventh_hole" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="7" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:id="@+id/eighth_hole" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="8" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:id="@+id/ninth_hole" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="9" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/back_nine" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <EditText android:textSize="12.0sp" android:gravity="center" android:id="@+id/tenth_hole" android:background="#00000000" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:hint="10" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:gravity="center" android:id="@+id/eleventh_hole" android:background="#00000000" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:hint="11" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:gravity="center" android:id="@+id/twelfth_hole" android:background="#00000000" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:hint="12" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:gravity="center" android:id="@+id/thirteenth_hole" android:background="#00000000" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:hint="13" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:gravity="center" android:id="@+id/fourteenth_hole" android:background="#00000000" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="7.0dip" android:hint="14" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:gravity="center" android:id="@+id/fifteenth_hole" android:background="#00000000" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:hint="15" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:gravity="center" android:id="@+id/sixteenth_hole" android:background="#00000000" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:hint="16" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:gravity="center" android:id="@+id/seventeenth_hole" android:background="#00000000" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:hint="17" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:textSize="12.0sp" android:gravity="center" android:id="@+id/eighteenth_hole" android:background="#00000000" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:hint="18" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
    </LinearLayout>
</LinearLayout>